# GazeTrajectoryAnalysis

./: .gitignore  README.md  equgat.py  example.py  pyproject.toml
input/: virtual_cyclist_config.json  virtual_cyclist_config_debug.json
util/: config.py  geometry.py  plot.py  xodr.py  xodr_xml_parser.py
