[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "equgat"
version = "1.0"
description = "EQUGAT: estimating driver perception of virtual cyclists from recorded gaze trajectories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.0.2",
    "scipy==1.15.3",
    "shapely==2.0.6",
    "matplotlib==3.9.3",
    "xsdata==24.11",
    "pyarrow==20.0.0",
    "cairosvg==2.9.0",
    "lifelines==0.30.3",
]

[tool.setuptools]
py-modules = ["equgat"]

[tool.setuptools.packages.find]
include = ["util*"]
